export const snapshot = {};

snapshot[`user facing logs > given no commits will trigger a release, expect logs to easily communicate that to the user 1`] = `
[
  "👋 Hello! I am a tool called new-deployment-tool. I help you deploy your projects.",
  "To learn how the deployment process of your project works, I suggest reading all of the logs that I print to you below.",
  "If you have more questions after reading the logs, you can optionally view the documentation to learn more about the tool: https://github.com/levibostian/new-deployment-tool/",
  "Ok, let's get started with the deployment!",
  "--------------------------------",
  "👀 I see that the git branch main is checked out. We will begin the deployment process from the latest commit of this branch.",
  "🔍 First, I need to get the latest release that was created on the git branch main. I'll look for it now...",
  "I have been told that the latest release on the git branch main is: v1.0.0",
  "📜 Next, I need to know all of the changes (git commits) that have been done on git branch main since the latest release: v1.0.0, commit: abc123. I'll look for them now...",
  "I found 1 git commits created since the latest release of v1.0.0.",
  "📊 Now I need to know (1) if any of these new commits need to be deployed and (2) if they should, what should the new version be. To determine this, I will analyze each git commit one-by-one...",
  "After analyzing all of the git commits, none of the commits need to be deployed. Therefore, the deployment process stops here with no new release to be made. Bye-bye 👋!",
]
`;

snapshot[`user facing logs > given no commits created since last deployment, expect logs to easily communicate that to the user 1`] = `
[
  "👋 Hello! I am a tool called new-deployment-tool. I help you deploy your projects.",
  "To learn how the deployment process of your project works, I suggest reading all of the logs that I print to you below.",
  "If you have more questions after reading the logs, you can optionally view the documentation to learn more about the tool: https://github.com/levibostian/new-deployment-tool/",
  "Ok, let's get started with the deployment!",
  "--------------------------------",
  "👀 I see that the git branch main is checked out. We will begin the deployment process from the latest commit of this branch.",
  "🔍 First, I need to get the latest release that was created on the git branch main. I'll look for it now...",
  "I have been told that the latest release on the git branch main is: v1.0.0",
  "📜 Next, I need to know all of the changes (git commits) that have been done on git branch main since the latest release: v1.0.0, commit: abc123. I'll look for them now...",
  "Looks like zero commits have been created since the latest release. This means there is no new code created and therefore, the deployment process stops here. Bye-bye 👋!",
]
`;

snapshot[`user facing logs > given no release has ever been made, expect logs to easily communicate that to the user 1`] = `
[
  "👋 Hello! I am a tool called new-deployment-tool. I help you deploy your projects.",
  "To learn how the deployment process of your project works, I suggest reading all of the logs that I print to you below.",
  "If you have more questions after reading the logs, you can optionally view the documentation to learn more about the tool: https://github.com/levibostian/new-deployment-tool/",
  "Ok, let's get started with the deployment!",
  "--------------------------------",
  "👀 I see that the git branch main is checked out. We will begin the deployment process from the latest commit of this branch.",
  "🔍 First, I need to get the latest release that was created on the git branch main. I'll look for it now...",
  "I have been told that the git branch, main, has never been released before. This will be the first release. Exciting!",
  "📜 Next, I need to know all of the changes (git commits) that have been done on git branch main since the latest release: undefined, commit: undefined. I'll look for them now...",
  "I found 1 git commits created since the git branch main was created.",
  "📊 Now I need to know (1) if any of these new commits need to be deployed and (2) if they should, what should the new version be. To determine this, I will analyze each git commit one-by-one...",
  "After analyzing all of the git commits, I have determined the next release version will be: 1.0.0",
  "🚢 It's time to ship 1.0.0! I will now run all of the deployment commands provided in your project's configuration file...",
  "🔄 Verifying that the new release was created by re-running the get-latest-release step...",
  "✅ Verification successful! The latest release is now 1.0.0, which matches the version that was just deployed.",
  "🎉 Congratulations! The deployment process has completed. Bye-bye 👋!",
]
`;

snapshot[`user facing logs > given running in test mode, given commits that trigger a release, expect logs to easily communicate that to the user 1`] = `
[
  "👋 Hello! I am a tool called new-deployment-tool. I help you deploy your projects.",
  "To learn how the deployment process of your project works, I suggest reading all of the logs that I print to you below.",
  "If you have more questions after reading the logs, you can optionally view the documentation to learn more about the tool: https://github.com/levibostian/new-deployment-tool/",
  "Ok, let's get started with the deployment!",
  "--------------------------------",
  "🧪 I see that I got triggered to run from a pull request event. In pull requests, I run in test mode which means that I will run the deployment process but I will not actually deploy anything.",
  "🧪 In test mode, I also simulate merging the current pull request and all parent pull requests (Note, I don't actually merge any pull requests). Simulating now...",
  "🧪 Simulated merges complete. You will notice that for the remainder of the deployment process, the current branch will be main instead of the pull request branch sweet-feature.",
  "👀 I see that the git branch main is checked out. We will begin the deployment process from the latest commit of this branch.",
  "🔍 First, I need to get the latest release that was created on the git branch main. I'll look for it now...",
  "I have been told that the latest release on the git branch main is: v1.0.0",
  "📜 Next, I need to know all of the changes (git commits) that have been done on git branch main since the latest release: v1.0.0, commit: abc123. I'll look for them now...",
  "I found 1 git commits created since the latest release of v1.0.0.",
  "📊 Now I need to know (1) if any of these new commits need to be deployed and (2) if they should, what should the new version be. To determine this, I will analyze each git commit one-by-one...",
  "After analyzing all of the git commits, I have determined the next release version will be: 1.0.0",
  "🚢 It's time to ship 1.0.0! I will now run all of the deployment commands provided in your project's configuration file...",
  "🔄 Verifying that the new release was created by re-running the get-latest-release step...",
  "✅ Verification successful! The latest release is now 1.0.0, which matches the version that was just deployed.",
  "🎉 Congratulations! The deployment process has completed. Bye-bye 👋!",
]
`;
